ERA-11: Refactored security roles