@@ -1,23 +1,21 @@
 package ua.edu.ratos.service.transformer;
 
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.PersistenceContext;
 import lombok.AllArgsConstructor;
 import lombok.NonNull;
 import org.springframework.stereotype.Component;
-import ua.edu.ratos.dao.entity.*;
-import ua.edu.ratos.dao.repository.RoleRepository;
+import ua.edu.ratos.dao.entity.Department;
+import ua.edu.ratos.dao.entity.Position;
+import ua.edu.ratos.dao.entity.Staff;
+import ua.edu.ratos.dao.entity.User;
 import ua.edu.ratos.security.SecurityUtils;
 import ua.edu.ratos.service.dto.in.StaffInDto;
 import ua.edu.ratos.service.dto.in.StaffUpdInDto;
-import ua.edu.ratos.service.transformer.StaffTransformer;
 import ua.edu.ratos.service.transformer.mapper.UserMapper;
 import ua.edu.ratos.service.transformer.mapper.UserUpdMapper;
 
-import jakarta.persistence.EntityManager;
-import jakarta.persistence.EntityNotFoundException;
-import jakarta.persistence.PersistenceContext;
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.Optional;
+import java.util.Set;
 
 @Component
 @AllArgsConstructor
@@ -30,8 +28,6 @@ public class StaffTransformerImpl implements StaffTransformer {
 
     private final UserUpdMapper userUpdMapper;
 
-    private final RoleRepository roleRepository;
-
     private final SecurityUtils securityUtils;
 
 
@@ -40,9 +36,7 @@ public class StaffTransformerImpl implements StaffTransformer {
         Staff staff = new Staff();
         staff.setStaffId(dto.getStaffId());
         User user = userMapper.toEntity(dto.getUser());
-        Optional<Role> role = roleRepository.findByName(dto.getRole());
-        user.setRoles(new HashSet<>(Arrays.asList(role.orElseThrow(()->
-                new EntityNotFoundException("ROLE is not found!")))));
+        user.setRoles(Set.of(dto.getRole()));
         user.setActive(dto.isActive());
         staff.setUser(user);
         staff.setPosition(em.getReference(Position.class, dto.getPositionId()));
@@ -56,9 +50,7 @@ public class StaffTransformerImpl implements StaffTransformer {
     public Staff toEntity(@NonNull final Staff staff, @NonNull final StaffUpdInDto dto) {
         staff.setStaffId(dto.getStaffId());
         User user = userUpdMapper.toEntity(staff.getUser(), dto.getUser());
-        Optional<Role> role = roleRepository.findByName(dto.getRole());
-        user.setRoles(new HashSet<>(Arrays.asList(role.orElseThrow(()->
-                new EntityNotFoundException("ROLE is not found!")))));
+        user.setRoles(Set.of(dto.getRole()));
         user.setActive(dto.isActive());
         staff.setPosition(em.getReference(Position.class, dto.getPositionId()));
         // If depId is included then transform, if not - current admin depId
